src/App.css
/* ... */
.content__card__status{
  position: absolute;
  top: 7px;
  right: 7px;
}

.card__status__indicator{
  width: 15px;
  height: 15px;
  border-radius: 50px;
  background: #E3FDFD;
  box-shadow: 0px 0px 0px 10px #fff;
}

.card__status{
  position: absolute;
  bottom: -5px;
  left: 20px;
}

.content__image{
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 3px;
}

.content__title{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 98%;
  min-height: 25px;
  max-height: 49px;
  background: #1f1f1fbc;
  border-radius: 0px 0px 3px 3px;
  font-size: .9em;
  padding: 1%;
  padding-bottom: 2px;
  word-break: break-all;
  text-align: center;
  color: #EEEEEE;
  overflow: hidden;
  cursor: pointer;
}

.detailed__view{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0;
  background: linear-gradient(#5B54FA,#538FFB);
  cursor: pointer;
  border-radius: 3px;
  transition: 0.3s ease-in-out;
}

.content__full__title{
  margin-left: 5px;
  margin-top: 5px;
  font-size: 1em;
  max-height: 100px;
  overflow: hidden;
  font-weight: normal;
  color: #EEEEEE;
}

.content__external__link{
  font-size: .9em;
  font-weight: 400;
  position: absolute;
  bottom: 50px;
  left: 5px;
  color: #000000;
  display: none;
}

.card__indi{
  display: none;
}

.allContents__wrapper{
  width: 90vw;
  min-height: max-content;
  height: max-content;
  padding-bottom: 50px;
  display: grid;
  grid-template-columns: repeat(7,1fr);
  margin: auto;
  margin-top: 30px;
  gap: 20px 0;
}

.AllContents__loading{
  position: fixed;
  top: 100px;
  left: 0;
  width: 100vw;
  height: 75vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #959595;
  font-weight: 600;
  font-size: 30px;
  z-index: 200;
}

.FullContentView__container{
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 200;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #393e46b0;
}

.FullContentView__wrapper{
  width: 900px;
  height: 600px;
  background: #222831;
  border-radius: 10px 0 0 10px;
  position: relative;
  overflow-y: scroll;
  overflow-x: hidden;
}

.FullContentView__closeBtn{
  position: absolute;
  top: 0;
  right: 0;
  width: 75px;
  height: 50px;
  background: #00ADB5;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 0px 0 10px;
  font-size: 30px;
  color: #EEEEEE;
  cursor: pointer;
  transition: 0.3s ease-in-out;
  z-index: 200;
  border: 3px solid #222831;
  border-top: none;
  border-right: none;
}

.FullContentView__closeBtn:hover{
  transition: 0.3s ease-in-out;
  background: #EEEEEE;
  color: #00ADB5;
}

.FullContentView__thumbnail{
  width: 100%;
  height: 350px;
  position: sticky;
  top: 10px;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  z-index: 120;
}

.FullContentView__thumbnail__cover{
  width: 100%;
  height: 400px;
  position: absolute;
  top: 0px;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  z-index: 100;
  overflow: hidden;
}

.FullContentView__info__container{
  width: 100%;
  min-height: 700px;
  height: max-content;
  max-height: max-content;
  z-index: 130;
  position: absolute;
  left: 0;
  top: 400px;
  background: #222831;
}

.FullContentView__info__title{
  width: 90%;
  min-height: 50px;
  max-height: max-content;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  margin-top: 10px;
  font-size: 26px;
  color: #00ADB5;
}

.FullContentView__info__other__title{
  width: 90%;
  margin: auto;
  margin-top: 40px;
  text-decoration: underline;
  color: #7cfff4;
  text-underline-offset: 5px;
  font-size: 26px;
}

.FullContentView__info__link a{
  color: #EEEEEE;
  margin-left: 10px;
}
.FullContentView__info__link{
  width: 90%;
  margin: auto;
  margin-top: 20px;
  color: #7cfff4;
  font-size: 12px;
  overflow: hidden;
  margin-bottom: 20px;
}

.color-white{
  color: #EEEEEE;
}

.FullContentView__info__category{
  padding: 5px;
  background: #0b0c0c;
  border-radius: 7px;
  color: #ffffff;
}

.FullContentView__info__modify{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 50%;
  height: 60px;
  background: #00ADB5;
  cursor: pointer;
  transition: 0.3s ease-in-out;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  color: #EEEEEE;
  border-right: 2px solid #000;
}

.FullContentView__info__modify:hover{
  box-shadow: inset 0px 0px 9px #222831;
  transition: 0.3s ease-in-out;
}

.FullContentView__info__remove{
  width: 50%;
  right: 0;
  left: unset;
  background: rgb(255, 69, 69);
  border-left: 2px solid rgb(0, 0, 0);
  border-right: none;
}

.totalContents{
  color: #EEEEEE;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  font-size: 16px;
  z-index: 300;
}

.content__count{
  padding: 5px;
  width: max-content;
  background-color: #0b0c0c;
  background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23606060' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
  border-radius: 5px;
  box-shadow: 0px 0px 10px #000000c8;
  user-select: none;
  cursor: pointer;
}
/* ... */

